--- a/triceratops/bin/config.yaml
+++ b/triceratops/bin/config.yaml
@@ -52,3 +52,6 @@ plotting:
   default_figsize: [10, 6]  # Default figure size for plots.
   dpi: 100                  # Default dots per inch for plots.
   default_cmap: 'viridis'   # Default colormap for plots.
+  use_tex: false            # Whether to use LaTeX for rendering text in plots. We keep this false so we work out
+                            # of the box, but users can enable it if they have LaTeX installed.
+  latex_preamble: "usepackage{graphicx,amsmath,amssymb,amsfonts,algorithmicx,algorithm,algpseudocodex}"
